force-app/main/default/objects/Opportunity/fields/My_Notes__c.field-meta.xml
<CustomField>
    <fullName>My_Notes__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non-Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <description>Populated from the Lead&apos;s Notes during Lead Conversion.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>