force-app/main/default/objects/Opportunity/fields/My_Region_Flag__c.field-meta.xml
<CustomField>
    <fullName>My_Region_Flag__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>If opportunity is located in User&apos;s region</description>
    <formula>
    AND(
        OR(
            $User.Area_Code__c ==  Owner.Area_Code__c,
            AND(
                CONTAINS($UserRole.Name, &apos;Head&apos;),
                $User.State_Code__c == Owner.State_Code__c
            ),
            CONTAINS($UserRole.Name, &apos;General Manager&apos;)
        ),
        TEXT($User.Commercial_Segment__c) ==  TEXT(Owner.Commercial_Segment__c)
    )
    </formula>
    <label>My Region Flag</label>
    <type>Checkbox</type>
</CustomField>