force-app/main/default/objects/Opportunity/fields/My_Reportees_Opps__c.field-meta.xml
<CustomField>
    <fullName>My_Reportees_Opps__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Non_Personal_Information;Source - Salesforce</complianceGroup>
    <description>My reportees data</description>
    <formula>Owner.ManagerId = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Reportees Opps</label>
    <type>Checkbox</type>
</CustomField>