force-app/main/default/objects/Opportunity/fields/My_Sub_Team__c.field-meta.xml
<CustomField>
    <fullName>My_Sub_Team__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Non_Personal_Information;Source - Salesforce</complianceGroup>
    <description>My Sub Team</description>
    <formula>$User.Sub_Team_Code__c = Owner.Sub_Team_Code__c 
&amp;&amp; NOT(ISNULL(Owner.Sub_Team_Code__c))
&amp;&amp; My_Team__c</formula>
    <label>My Sub Team</label>
    <type>Checkbox</type>
</CustomField>