force-app/main/default/objects/Opportunity/fields/New_Lending_Amount__c.field-meta.xml
<CustomField>
    <fullName>New_Lending_Amount__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non-Sensitive_Personal_Information;Source_Salesforce</complianceGroup>
    <description>To track the new lending amount which is the difference between the current lending vs the total loan amount.</description>
    <label>New Lending Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>