force-app/main/default/objects/Opportunity/fields/New_to_Bank__c.field-meta.xml
<CustomField>
    <fullName>New_to_Bank__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>New to Bank flag that denotes whether the customer is an existing customer or a new to bank prospect</description>
    <label>New to Bank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>