force-app/main/default/objects/Opportunity/fields/Opp_Id__c.field-meta.xml
<CustomField>
    <fullName>Opp_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Readable opportunity Id populated during lead conversion to opportunity</description>
    <displayFormat>0-{0000000}</displayFormat>
    <label>Opp Id</label>
    <type>AutoNumber</type>
</CustomField>