force-app/main/default/objects/Opportunity/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Readable Opportunity ID</description>
    <displayFormat>{0000000000}</displayFormat>
    <label>Opportunity ID</label>
    <type>AutoNumber</type>
</CustomField>