force-app/main/default/objects/Opportunity/fields/Opportunity_Owner_Teamcode__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Teamcode__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Non_Personal_Information;Source - Salesforce</complianceGroup>
    <description>Opportunity Owner Teamcode</description>
    <formula>Owner.Team_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner Teamcode</label>
    <type>Text</type>
</CustomField>