force-app/main/default/objects/Opportunity/fields/Other_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Other_Source_Detail__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>To capture additional information when &quot;other&quot; is selected for Lead source.</description>
    <label>Other Source Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>