force-app/main/default/objects/Opportunity/fields/Owner_Segment__c.field-meta.xml
<CustomField>
    <fullName>Owner_Segment__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Opportunity Owner Segment</description>
    <formula>TEXT(Owner.Commercial_Segment__c)</formula>
    <label>Owner Segment</label>
    <type>Text</type>
</CustomField>