force-app/main/default/objects/Opportunity/fields/Owner_State__c.field-meta.xml
<CustomField>
    <fullName>Owner_State__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Opportunity Owner State Code</description>
    <formula>Owner.State_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner State</label>
    <type>Text</type>
</CustomField>