force-app/main/default/objects/Opportunity/fields/Pega_Case_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Pega_Case_Unique_Identifier__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Pega_SD</complianceGroup>
    <description>Pega Case Unique Identifier</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pega Case Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>