force-app/main/default/objects/Opportunity/fields/PPR_Link__c.field-meta.xml
<CustomField>
    <fullName>PPR_Link__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <description>Property Profile Report</description>
    <label>PPR Link</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>