force-app/main/default/objects/Opportunity/fields/Preferred_Franchise__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Franchise__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_OCV;Integrity_Accurate</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Preferred franchise brand</description>
    <label>Preferred Franchise</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Franchise_Brand__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Franchise_Brand__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>