force-app/main/default/objects/Opportunity/fields/Pricing_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Reference_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>The reference number obtained from CPT/IPT once a quote is approved.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the approved CPT/IPT Pricing Reference Number (max 20 characters).</inlineHelpText>
    <label>Pricing Reference Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>