force-app/main/default/objects/Opportunity/fields/Progress_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Progress_Indicator__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Formula to display current stage Indicator.</description>
    <formula>IMAGE(CASE(StageName, 
        &apos;Opportunity Identified&apos;, &apos;/resource/ProgressRing/ProgressRing10.png&apos;
        ,&apos;Needs Analysis&apos;, &apos;/resource/ProgressRing/ProgressRing20.png&apos;
        ,&apos;Solution Development&apos;, &apos;/resource/ProgressRing/ProgressRing40.png&apos;
        ,&apos;Approved &amp; Offered&apos;,&apos;/resource/ProgressRing/ProgressRing60.png&apos;
        ,&apos;Customer Acceptance&apos;,&apos;/resource/ProgressRing/ProgressRing80.png&apos;
        ,&apos;Opportunity Won&apos;, &apos;/resource/ProgressRing/ProgressRingWon.png&apos;
        ,&apos;Opportunity Lost&apos;, &apos;/resource/ProgressRing/ProgressRingLost.png&apos;
        ,&apos;/resource/ProgressRing/ProgressRingLost.png&apos;
), &apos;Progress&apos;, 32, 32)</formula>
    <label>Progress Indicator</label>
    <type>Text</type>
</CustomField>