force-app/main/default/objects/Opportunity/fields/Progress_Payment__c.field-meta.xml
<CustomField>
    <fullName>Progress_Payment__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a construction loan application will be progressively drawn</description>
    <label>Progress Payment</label>
    <type>Checkbox</type>
</CustomField>