force-app/main/default/objects/Opportunity/fields/Referrer_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Business_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>To capture referrer business name from Lead Conversion\ Opportunity Creation.</description>
    <label>Referrer Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>