force-app/main/default/objects/Opportunity/fields/Referrer_Email__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Email__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Email address of the ANZ Staff who referred the Lead Details to ML from Lead Conversion\ Opportunity Creation.</description>
    <label>Referrer Email</label>
    <type>Email</type>
</CustomField>