force-app/main/default/objects/Opportunity/fields/Referrer_Industry_Type__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Industry_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>To capture referrer industry type from Lead Conversion\ Opportunity Creation.</description>
    <label>Referrer Industry Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>