force-app/main/default/objects/Opportunity/fields/Referrer_Name__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Name of the ANZ staff not on Salesforce from Lead Conversion\ Opportunity Creation.</description>
    <label>Referrer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>