force-app/main/default/objects/Opportunity/fields/Referrer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Phone__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Work or Mobile# phone of referrer from Lead Conversion\ Opportunity Creation.</description>
    <label>Referrer Phone</label>
    <type>Phone</type>
</CustomField>