force-app/main/default/objects/Opportunity/fields/ROI_Analysis_Completed__c.field-meta.xml
<CustomField>
    <fullName>ROI_Analysis_Completed__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
    <defaultValue>false</defaultValue>
    <label>ROI Analysis Completed</label>
    <type>Checkbox</type>
</CustomField>