force-app/main/default/objects/Opportunity/fields/Servicing_Branch__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Branch__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <description>Branch Number that the application was created under</description>
    <label>Servicing Branch</label>
    <length>4</length>
    <type>Text</type>
</CustomField>