force-app/main/default/objects/Opportunity/fields/Settlement_Booked__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Booked__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non-Sensitive_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>To track a settlement has been booked in for their opportunity record</description>
    <label>Settlement Booked</label>
    <type>Checkbox</type>
</CustomField>