force-app/main/default/objects/Opportunity/fields/Settlement_Completed__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Completed__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Indicates whether settlement has been completed, loans drawn, and funds disbursed.</description>
    <label>Settlement Completed</label>
    <type>Checkbox</type>
</CustomField>