force-app/main/default/objects/Opportunity/fields/Source_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Lead_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Lead Id of the source converted lead</description>
    <label>Source Lead Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>