force-app/main/default/objects/Opportunity/fields/Source_Lead_Link__c.field-meta.xml
<CustomField>
    <fullName>Source_Lead_Link__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Source Lead Record Link</description>
    <formula>IF( 
Lead_Id__c == null, 
Lead_Id__c, 
HYPERLINK( &apos;/lightning/r/Lead/&apos; + Source_Lead_Id__c + &apos;/view&apos;, &apos;Source Lead Record&apos;, &apos;_self&apos; )
)</formula>
    <label>Source Lead</label>
    <type>Text</type>
</CustomField>