force-app/main/default/objects/Opportunity/fields/Specialisation__c.field-meta.xml
<CustomField>
    <fullName>Specialisation__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Personal_Information;Source - Salesforce</complianceGroup>
    <description>Specialisation of the customer	</description>
    <label>Specialisation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Franchise</fullName>
            </value>
            <value>
                <fullName>Insights</fullName>
            </value>
            <value>
                <fullName>ESG</fullName>
            </value>
            <value>
                <fullName>ACC - Accountant</fullName>
                <isActive>false</isActive>
                <label>ACC - Accountant</label>
            </value>
            <value>
                <fullName>AGE - Aged Care Operator</fullName>
                <isActive>false</isActive>
                <label>AGE - Aged Care Operator</label>
            </value>
            <value>
                <fullName>BOD - Body Corp or Strata Mgr</fullName>
                <isActive>false</isActive>
                <label>BOD - Body Corp or Strata Mgr</label>
            </value>
            <value>
                <fullName>BRO - Finance Broker</fullName>
                <isActive>false</isActive>
                <label>BRO - Finance Broker</label>
            </value>
            <value>
                <fullName>CHI - Child Care</fullName>
                <isActive>false</isActive>
                <label>CHI - Child Care</label>
            </value>
            <value>
                <fullName>COO - Broker-connected Customer</fullName>
                <isActive>false</isActive>
                <label>COO - Broker-connected Customer</label>
            </value>
            <value>
                <fullName>DEN - Dentists</fullName>
                <isActive>false</isActive>
                <label>DEN - Dentists</label>
            </value>
            <value>
                <fullName>DEV - Property Developer</fullName>
                <isActive>false</isActive>
                <label>DEV - Property Developer</label>
            </value>
            <value>
                <fullName>DOC - Medical Practitioner</fullName>
                <isActive>false</isActive>
                <label>DOC - Medical Practitioner</label>
            </value>
            <value>
                <fullName>FIN - Financial Planner</fullName>
                <isActive>false</isActive>
                <label>FIN - Financial Planner</label>
            </value>
            <value>
                <fullName>FRA - Franchise System</fullName>
                <isActive>false</isActive>
                <label>FRA - Franchise System</label>
            </value>
            <value>
                <fullName>GCG - Govt Consultative Group</fullName>
                <isActive>false</isActive>
                <label>GCG - Govt Consultative Group</label>
            </value>
            <value>
                <fullName>INB - Insurance Broker</fullName>
                <isActive>false</isActive>
                <label>INB - Insurance Broker</label>
            </value>
            <value>
                <fullName>LEG - Legal Firm</fullName>
                <isActive>false</isActive>
                <label>LEG - Legal Firm</label>
            </value>
            <value>
                <fullName>LSR - Landmark Store Referral</fullName>
                <isActive>false</isActive>
                <label>LSR - Landmark Store Referral</label>
            </value>
            <value>
                <fullName>MCD - McDonalds</fullName>
                <isActive>false</isActive>
                <label>MCD - McDonalds</label>
            </value>
            <value>
                <fullName>MGT - Management Rights</fullName>
                <isActive>false</isActive>
                <label>MGT - Management Rights</label>
            </value>
            <value>
                <fullName>MIN - Mining &amp; Infrastructure</fullName>
                <isActive>false</isActive>
                <label>MIN - Mining &amp; Infrastructure</label>
            </value>
            <value>
                <fullName>ONE - OnePath Fin Planning</fullName>
                <isActive>false</isActive>
                <label>ONE - OnePath Fin Planning</label>
            </value>
            <value>
                <fullName>PHA - Pharmacy</fullName>
                <isActive>false</isActive>
                <label>PHA - Pharmacy</label>
            </value>
            <value>
                <fullName>RRR - Real Estate Rent Roll</fullName>
                <isActive>false</isActive>
                <label>RRR - Real Estate Rent Roll</label>
            </value>
            <value>
                <fullName>RTV - Retirement Village</fullName>
                <isActive>false</isActive>
                <label>RTV - Retirement Village</label>
            </value>
            <value>
                <fullName>SAA - IGA-1in7 Fund</fullName>
                <isActive>false</isActive>
                <label>SAA - IGA-1in7 Fund</label>
            </value>
            <value>
                <fullName>SAB - IGA</fullName>
                <isActive>false</isActive>
                <label>SAB - IGA</label>
            </value>
            <value>
                <fullName>SAC - IGA Everyday &amp; SUPA</fullName>
                <isActive>false</isActive>
                <label>SAC - IGA Everyday &amp; SUPA</label>
            </value>
            <value>
                <fullName>SAD - Franklins</fullName>
                <isActive>false</isActive>
                <label>SAD - Franklins</label>
            </value>
            <value>
                <fullName>SAE - SPAR</fullName>
                <isActive>false</isActive>
                <label>SAE - SPAR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>