force-app/main/default/objects/Opportunity/fields/Specialisation_SubCategory__c.field-meta.xml
<CustomField>
    <fullName>Specialisation_SubCategory__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_OCV;Integrity_Accurate</complianceGroup>
    <description>Specialisation Subcategory</description>
    <label>Specialisation Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Specialisation__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insights</fullName>
            </value>
            <value>
                <fullName>ESG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>