force-app/main/default/objects/Opportunity/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <description>Date application submitted for credit assessment</description>
    <label>Submission Date</label>
    <type>Date</type>
</CustomField>