force-app/main/default/objects/Opportunity/fields/Sufficient_Date__c.field-meta.xml
<CustomField>
    <fullName>Sufficient_Date__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <description>The date that supporting documents were deemed sufficient to allow credit assessment to commence.</description>
    <label>Sufficient Date</label>
    <type>Date</type>
</CustomField>