force-app/main/default/objects/Opportunity/fields/Total_Application_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Application_Amount__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Personal_Information;Source - Salesforce</complianceGroup>
    <description>Sum of all application form amount.</description>
    <label>Total Application Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>