force-app/main/default/objects/Opportunity/fields/Total_Mortgage_Lending__c.field-meta.xml
<CustomField>
    <fullName>Total_Mortgage_Lending__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Sensitive_Personal_Information;Source - Salesforce</complianceGroup>
    <description>Total Mortgage Lending Amount</description>
    <label>Total Mortgage Lending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>