force-app/main/default/objects/Opportunity/fields/Transaction_Banking_Process__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Banking_Process__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Transaction Banking Process</description>
    <label>Transaction Banking Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transaction Banking Insights</fullName>
            </value>
            <value>
                <fullName>Transaction Banking Review</fullName>
            </value>
            <value>
                <fullName>New Product Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>