force-app/main/default/objects/Opportunity/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - GCP</complianceGroup>
    <description>To capture the version of simpology event</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>